add deactivate endpoint
